--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="about.html" id="AboutUs">About Us</a>
             <a href="#service" id="Service">Service</a>
             <a href="#contact" id="ContactUs">Contact Us</a>
-            <a href="signup.html" id="Signup">Signup</a>
+            <a href="signup.php" id="Signup">Signup</a>
             <input type="text" id="search" name="searchService" placeholder="Search...">
         </nav>
     </header>
@@ -41,7 +41,7 @@
 
                 <script>
                     function grab(){
-                        location = 'pageOne.html';
+                        location = 'pageOne.php';
                     }
                 </script>
             </div>
